--- a/src/app/pages/super-admin/admin-setup/insurance-groups/insurance-groups.component.html
+++ b/src/app/pages/super-admin/admin-setup/insurance-groups/insurance-groups.component.html
@@ -18,9 +18,35 @@
                   <mat-icon class="mat-margin-top">add</mat-icon>
                 </button>
                 <button matTooltip="Filter" mat-raised-button style="background-color: black; color: white"
-                  class="pull-right filter-hover margin-right-10 center-icon" (click)="filterToggle1 = !filterToggle1">
+                  class="pull-right filter-hover margin-right-10 center-icon" (click)="filterToggle = !filterToggle">
                   <mat-icon class="mt-2" matTooltip="Filter">filter_list</mat-icon>
                 </button>
+
+
+                <!-- Sort Button -->
+                <button mat-raised-button mat-button [matMenuTriggerFor]="sortMenu" style="background-color: #37474f; color: white" class="filters-hover pull-right margin-right-10">
+                  <span (click)="toggleSort($event)" class="icon-text">
+                  <mat-icon style="margin-top: 0px; margin-bottom: -6px;">
+                      {{ isAscending ? 'arrow_drop_up' : 'arrow_drop_down' }}
+                  </mat-icon>
+                  </span>
+                  <span class="icon-text">SORT</span>
+              </button>
+              
+              <!-- Dropdown Menu -->
+              <mat-menu #sortMenu="matMenu">
+                  <div class="scrollable-menu">
+                  <button mat-menu-item (click)="onSortOptionSelected('option1')">Option 1</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('option2')">Option 2</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('option3')">Option 3</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('option4')">Option 4</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('option5')">Option 5</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('option6')">Option 6</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('option7')">Option 7</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('option8')">Option 8</button>
+                  </div>
+              </mat-menu>
+
 
                 <button matTooltip="Download CSV" mat-raised-button class="pull-right center-icon" style="
                               background-color: #50636d !important;
@@ -59,115 +85,76 @@
         </div>
 
 
-        <!-- <div
-            fxLayout="row wrap"
-            *ngIf="filterToggle1"
-            style="
-              margin-bottom: 10px;
-              flex-flow: wrap;
-              box-sizing: border-box;
-              display: flex;
-            "
-          > -->
-        <!-- <div fxFlex="100" class="flex-p w-100">
-              <form [formGroup]="filterForm">
-                <mat-card class="filter">
-                  <mat-card-content>
-                    <div class="row" style="margin-bottom: 10px">
-                      <div class="col-sm-6 row">
-                        <label class="col-sm-2" style="margin-top: 6px"
-                          ><b>Keyword:</b></label
-                        >
-                        <div class="col-sm-6">
-                          <input
-                            type="text"
-                            placeholder="Search by Keyword"
-                            class="form-control"
-                          />
-                        </div>
+        
+
+        <div fxLayout="row wrap" *ngIf="filterToggle" style=" margin-bottom: 10px;margin-left: 33px;">
+          <div fxFlex="63" class="flex-p w-50">
+            <form [formGroup]="filterForm">
+              <mat-card class="filter">
+                <mat-card-content>
+                  <div class="row col-sm-12">
+                    <div class="col-sm-4 row">
+                      <div class="col-sm-4 newMarginClass">
+                        <b>Keyword:</b>
                       </div>
-  
-                      <div class="col-sm-6 row" style="margin-left: -130px">
-                        <label class="col-sm-2" style="margin-top: 6px"
-                          ><b>Segment:</b></label
-                        >
-                        <div class="col-sm-6">
-                          <select class="form-control" style="height: 36px">
-                            <option>--Select Segment--</option>
-                            <option value="Physician">Physician Office</option>
-                            <option value="Imaging">Imaging Centers</option>
-                            <option value="Hospitals">Hospitals</option>
-                          </select>
-                        </div>
+                      <div class="col-sm-8">
+                        <input type="text" formControlName="Keyword" onCopy="return false" onPaste="return false"
+                          class="form-control" placeholder="Search by Keyword">
                       </div>
                     </div>
-  
-                    <div class="row" style="margin-bottom: 10px">
-                      <div class="col-sm-6 row">
-                        <label class="col-sm-2" style="margin-top: 6px"
-                          ><b>Focus Area:</b></label
-                        >
-                        <div class="col-sm-10">
-                          <select class="form-control" style="height: 36px">
-                            <option>--Select Focus Area--</option>
-                            <option>Provider</option>
-                            <option>Requestor</option>
-                          </select>
-                        </div>
-                      </div>
-  
-                      <div class="col-sm-6 row">
-                        <label class="col-sm-2" style="margin-top: 6px"
-                          ><b>Status:</b></label
-                        >
-                        <div class="col-sm-4">
-                          <select class="form-control" formControlName="Role">
-                            <option [value]="1">Active</option>
-                            <option [value]="2">Inactive</option>
-                          </select>
-                        </div>
-  
-                        <div
-                          class="col-sm-6"
-                          style="display: flex; justify-content: flex-end"
-                        >
-                          <button
-                            mat-raised-button
-                            class="btn-default margin-right-10"
-                            style="margin-right: 10px"
-                          >
-                            Clear
-                          </button>
-                          <button
-                            mat-raised-button
-                            color="primary"
-                            style="
-                              background-color: #007bff !important;
-                              color: white;
-                              margin-right: 10px;
-                            "
-                          >
-                            Search
-                          </button>
-                          <a
-                            (click)="filterToggle1 = !filterToggle1"
-                            style="font-size: 25px; cursor: pointer"
-                          >
-                            <i
-                              class="fa fa-angle-double-up"
-                              aria-hidden="true"
-                            ></i>
+        
+        
+        
+                    <div class="col-sm-8">
+                      <div class="row">
+                        <div class="col-sm-12 offset-sm-3">
+                          <a (click)="filterToggle = !filterToggle" matTooltip="Close" class="pull-right"
+                            style="font-size: 20px; cursor: pointer; margin-left: 5px">
+                            <i class="fa fa-angle-double-up" aria-hidden="true"></i>
                           </a>
+        
+                          <i class="material-icons pull-right" matTooltip="Clear"
+                            style="font-size: 25px; cursor: pointer; margin-left: 5px">
+                            settings_backup_restore
+                          </i>
+        
+                          <i class="fa fa-save pull-right" matTooltip="Save" style="
+                                                                font-size: 20px;
+                                                                cursor: pointer;
+                                                                margin-left: 5px;
+                                                                color: green;
+                                                              " aria-hidden="true">
+                          </i>
+        
+                          <i class="fa fa-search pull-right" matTooltip="Search" style="
+                                                                font-size: 20px;
+                                                                cursor: pointer;
+                                                                margin-left: 5px;
+                                                                color: blue;
+                                                              " aria-hidden="true">
+                          </i>
                         </div>
                       </div>
                     </div>
-                  </mat-card-content>
-                </mat-card>
-              </form>
-            </div> -->
-        <!-- </div> -->
+        
+                  </div>
+                </mat-card-content>
+              </mat-card>
+            </form>
+          </div>
+        </div>
+
         <div fxLayout="row wrap" style="padding: 20px">
+          
+
+
+
           <div class="w-100">
+
+
+            
+
+
             <div fxLayout="row wrap">
               <div class="table-responsive w-100" style="margin-top: -20px" id="divTable">
                 <table id="tblContacts" class="table table-striped table-bordered table-hover" matSort
