--- a/src/app/pages/super-admin/admin-setup/insurance-groups/insurance-groups.component.scss
+++ b/src/app/pages/super-admin/admin-setup/insurance-groups/insurance-groups.component.scss
@@ -21,3 +21,14 @@
     margin: 0;
   }
   
+
+  ::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
+  
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+  }
