--- a/src/app/pages/super-admin/rcm-accounts/rcm-accounts.component.html
+++ b/src/app/pages/super-admin/rcm-accounts/rcm-accounts.component.html
@@ -1,4 +1,36 @@
 <div class="col-sm-12">
+  <div class="arrow-container">
+    <div class="arrow-shape" style="background-color: #D9D9D9; color: black;">
+      <span class="arrow-text">Total Networks</span>
+      <span class="arrow-number">24</span>
+    </div>
+  
+    <div class="arrow-shape" style="background-color: #FFD2B2; color: black;">
+      <span class="arrow-text">Added This Year</span>
+      <span class="arrow-number">18</span>
+    </div>
+  
+    <div class="arrow-shape" style="background-color: #A8E5C1; color: black;">
+      <span class="arrow-text">Added This Quarter</span>
+      <span class="arrow-number">5</span>
+    </div>
+  
+    <div class="arrow-shape" style="background-color: #C4C2FF; color: black;">
+      <span class="arrow-text">10+ Providers</span>
+      <span class="arrow-number">8</span>
+    </div>
+    <div class="arrow-shape" style="background-color: #B3E3F6; color: black;">
+      <span class="arrow-text">20+ Law Firms</span>
+      <span class="arrow-number">6</span>
+    </div>
+    <div class="arrow-shape" style="background-color: #E0DBFF; color: black;">
+      <span class="arrow-text">1000+ Patients</span>
+      <span class="arrow-number">4</span>
+    </div>
+  </div>
+</div>
+
+<div class="col-sm-12">
   <div fxLayout="row wrap">
     <div class="w-100">
       <div class="flex-p">
@@ -20,6 +52,30 @@
                 class="pull-right filter-hover margin-right-10" (click)="filterToggle = !filterToggle">
                 <mat-icon class="mt-2">filter_list</mat-icon> Filter
               </button>
+
+              <!-- Sort Button -->
+              <button mat-raised-button mat-button [matMenuTriggerFor]="sortMenu" style="background-color: #37474f; color: white" class="filters-hover pull-right margin-right-10">
+                <span (click)="toggleSort($event)" class="icon-text">
+                  <mat-icon style="margin-top: 0px; margin-bottom: -6px;">
+                    {{ isAscending ? 'arrow_drop_up' : 'arrow_drop_down' }}
+                  </mat-icon>
+                </span>
+                <span class="icon-text">SORT</span>
+              </button>
+
+              <!-- Dropdown Menu -->
+              <mat-menu #sortMenu="matMenu">
+                <div class="scrollable-menu">
+                  <button mat-menu-item (click)="onSortOptionSelected('Network')">Network</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('Phone')">Phone</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('Insurance')">Insurance</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('Email')">Email</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('State')">State</button>
+                  <button mat-menu-item (click)="onSortOptionSelected('City')">City</button>
+                  
+                </div>
+              </mat-menu>
+
 
               <button mat-raised-button class="pull-right" style="
                   background-color: #50636d !important;
@@ -115,7 +171,7 @@
                     </div>
                   </div>
 
-                  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
+                  
                 </div>
                 <div class="row col-sm-12" style="margin-top: 10px">
                   <div class="col-sm-4 row">
@@ -138,19 +194,51 @@
                     </div>
                   </div>
 
-                  <div class="col-sm-4 pull-right" style="margin-right: 75px">
-                    <a (click)="filterToggle = !filterToggle" class="pull-right"
-                      style="font-size: 25px; cursor: pointer; margin-left: 5px">
-                      <i class="fa fa-angle-double-up" aria-hidden="true"></i>
-                    </a>
-                    <button mat-raised-button color="primary" class="pull-right"
-                      style="background-color: #007bff !important; color: white">
-                      Search
-                    </button>
 
-                    <button mat-raised-button class="pull-right btn-default margin-right-10">
-                      Clear
-                    </button>
+
+                  <div class="col-sm-4 row">
+                    <div class="col-sm-2" style="margin-top: 6px">
+                      <b>Status:</b>
+                    </div>
+                    <div class="col-sm-10">
+                      <mat-select  placeholder="--Select Status--" class="form-control">
+                        <mat-option >Active</mat-option>
+                        <mat-option >Inactive</mat-option>
+                      </mat-select>
+                    </div>
+                  </div>
+
+
+                  <div class="col-sm-4">
+                    <div class="row">
+                      <div class="col-sm-11 offset-sm-3">
+                        <a (click)="filterToggle = !filterToggle" matTooltip="Close" class="pull-right"
+                          style="font-size: 20px; cursor: pointer; margin-left: 5px">
+                          <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+                        </a>
+          
+                        <i class="material-icons pull-right" matTooltip="Clear"
+                          style="font-size: 25px; cursor: pointer; margin-left: 5px">
+                          settings_backup_restore
+                        </i>
+          
+                        <i class="fa fa-save pull-right" matTooltip="Save"  style="
+                                          font-size: 20px;
+                                          cursor: pointer;
+                                          margin-left: 5px;
+                                          color: green;
+                                        " aria-hidden="true">
+                        </i>
+          
+                        <i class="fa fa-search pull-right" matTooltip="Search" style="
+                                          font-size: 20px;
+                                          cursor: pointer;
+                                          margin-left: 5px;
+                                          color: blue;
+                                        " aria-hidden="true">
+                        </i>
+                      </div>
+                    </div>
                   </div>
 
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
