--- a/src/app/pages/super-admin/admin-setup/staff-users/admin-userss/admin-userss.component.scss
+++ b/src/app/pages/super-admin/admin-setup/staff-users/admin-userss/admin-userss.component.scss
@@ -4,3 +4,14 @@
     right: 40px;
     background-color: #e6e6e6 !important;
 }
+
+::ng-deep .mat-menu-panel {
+    max-height: 250px !important;
+}
+
+::ng-deep .scrollable-menu {
+    max-height: 200px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+}
