--- a/src/app/pages/super-admin/admin-setup/staff-users/staff-users.component.html
+++ b/src/app/pages/super-admin/admin-setup/staff-users/staff-users.component.html
@@ -1,7 +1,6 @@
-
-<div class="col-sm-12" style="margin-left: -5px; margin-bottom: 10px;">
+<div class="col-sm-12 mb-3">
     <div class="pills">
-        <ul class="nav nav-pills" style="margin-left: 10px;">
+        <ul class="nav nav-pills">
             <li routerLinkActive="active" [routerLink]="['users']">
                 <a mat-raised-button>
                     Users
