--- a/src/app/pages/super-admin/admin-setup/staff-users/admin-roles/admin-roles.component.html
+++ b/src/app/pages/super-admin/admin-setup/staff-users/admin-roles/admin-roles.component.html
@@ -1,142 +1,155 @@
-<div class="col-sm-12" fxLayout="row wrap" #resizedDiv>
-    <div class="flex-p w-100">
+<div class="col-sm-12">
+    <button mat-raised-button class="pull-right" (click)="openEditDialog()"
+        style="background-color: blue; color: white;">
+        <mat-icon>person_add</mat-icon> Add Role
+    </button>
 
-        <div class="row" style="margin-bottom:14px;">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                <div class="w-100 flex-p">
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                <div class="w-100 flex-p">
-                    <button mat-raised-button class="pull-right" (click)="openEditDialog()"
-                        style=" margin-right: 22px; background-color: blue; color: white;">
-                        <mat-icon>person_add</mat-icon> Add Role
-                    </button>
+    <button mat-raised-button style="background-color: black; color:white;" class="pull-right margin-right-10"
+        (click)="filterToggle = !filterToggle">
+        <mat-icon>filter_list</mat-icon> Filter
+    </button>
+    <!-- Sort Button -->
+    <button mat-raised-button mat-button [matMenuTriggerFor]="sortMenu" style="background-color: #37474f; color: white"
+        class="filters-hover pull-right margin-right-10">
+        <span (click)="toggleSort($event)" class="icon-text">
+            <mat-icon style="margin-top: 0px; margin-bottom: -6px;">
+                {{ isAscending ? 'arrow_drop_up' : 'arrow_drop_down' }}
+            </mat-icon>
+        </span>
+        <span class="icon-text">SORT</span>
+    </button>
 
-                    <button mat-raised-button style="background-color: black; color:white;"
-                        class="pull-right margin-right-10" (click)="filterToggle = !filterToggle">
-                        <mat-icon>filter_list</mat-icon> Filter
-                    </button>
-                </div>
-            </div>
+    <!-- Dropdown Menu -->
+    <mat-menu #sortMenu="matMenu">
+        <div class="scrollable-menu">
+            <button mat-menu-item (click)="onSortOptionSelected('Role')">Role</button>
+            <button mat-menu-item (click)="onSortOptionSelected('Users')">Users</button>
+            <button mat-menu-item (click)="onSortOptionSelected('Special Permission')">Special Permission</button>
+            <button mat-menu-item (click)="onSortOptionSelected('Screen Permissions')">Screen Permissions</button>
+
         </div>
+    </mat-menu>
+</div>
+<!-- Filter -->
+<div fxLayout="row wrap" class="col-sm-12 mt-3" *ngIf="filterToggle">
+    <div fxFlex="100" fxFlex.gt-sm fxFlex.sm class="flex-p">
+        <form [formGroup]="filterForm">
+            <mat-card class="filter">
+                <mat-card-content>
+                    <div class="row col-sm-12">
+                        <div class="col-sm-4">
+                            <div class="col-sm-3 newMarginClass">
+                                <b>Keyword:</b>
+                            </div>
+                            <div class="col-sm-9">
+                                <input type="text" onCopy="return false" onPaste="return false" class="form-control"
+                                    placeholder="Search by Name, Email, Role">
+                            </div>
+                        </div>
 
-        <!-- Filter -->
-        <div fxLayout="row wrap" *ngIf="filterToggle">
-            <div fxFlex="100" fxFlex.gt-sm fxFlex.sm class="flex-p">
-                <form [formGroup]="filterForm">
-                    <mat-card class="filter">
-                        <mat-card-content>
-                            <div class="row col-sm-12">
-                                <div class="col-sm-4">
-                                    <div class="col-sm-3 newMarginClass">
-                                        <b>Keyword:</b>
-                                    </div>
-                                    <div class="col-sm-9">
-                                        <input type="text" onCopy="return false" onPaste="return false"
-                                            class="form-control" placeholder="Search by Name, Email, Role">
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-4">
-                                    <div class="col-sm-3 newMarginClass">
-                                        <b>Role:</b>
-                                    </div>
-                                    <div class="col-sm-8">
-                                        <select placeholder="Select Role" class="form-control">
-                                            <option [value]="1">
-                                                Admin
-                                            </option>
-                                            <option [value]="2">
-                                                Client
-                                            </option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-
-                                    <a (click)="filterToggle = !filterToggle" class="pull-right"
-                                        style="font-size: 25px; cursor: pointer; margin-left: 5px">
+                        <div class="col-sm-4">
+                            <div class="col-sm-3 newMarginClass">
+                                <b>Role:</b>
+                            </div>
+                            <div class="col-sm-8">
+                                <select placeholder="Select Role" class="form-control">
+                                    <option [value]="1">
+                                        Admin
+                                    </option>
+                                    <option [value]="2">
+                                        Client
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="row">
+                                <div class="col-sm-12 offset-sm-3">
+                                    <a (click)="filterToggle = !filterToggle" matTooltip="Close" class="pull-right"
+                                        style="font-size: 20px; cursor: pointer; margin-left: 5px">
                                         <i class="fa fa-angle-double-up" aria-hidden="true"></i>
                                     </a>
-                                    <button mat-raised-button color="primary" class="pull-right" (click)="filter()">
-                                        <mat-icon>youtube_searched_for</mat-icon> Search
-                                    </button>
-                                    <button mat-raised-button class="pull-right btn-default margin-right-10"
-                                        (click)="clearFilter()">
-                                        <mat-icon>settings_backup_restore</mat-icon> Clear
-                                    </button>
+
+                                    <i class="material-icons pull-right" matTooltip="Clear"
+                                        style="font-size: 25px; cursor: pointer; margin-left: 5px">
+                                        settings_backup_restore
+                                    </i>
+
+                                    <i class="fa fa-save pull-right" matTooltip="Save" style="
+                                                                  font-size: 20px;
+                                                                  cursor: pointer;
+                                                                  margin-left: 5px;
+                                                                  color: green;
+                                                                " aria-hidden="true">
+                                    </i>
+
+                                    <i class="fa fa-search pull-right" matTooltip="Search" style="
+                                                                  font-size: 20px;
+                                                                  cursor: pointer;
+                                                                  margin-left: 5px;
+                                                                  color: blue;
+                                                                " aria-hidden="true">
+                                    </i>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
                             </div>
-                        </mat-card-content>
-                    </mat-card>
-                </form>
-            </div>
-        </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
+                    </div>
+                </mat-card-content>
+            </mat-card>
+        </form>
+    </div>
+</div>
 
-
-        <!-- Creating Table -->
-        <div style="margin-left: 10px;padding-right: 17px;">
-            <div class="table-responsive">
-                <table id="example2" class="table table-bordered table-hover">
-                    <thead class="tbl-head">
-                        <tr class="tr-grid-header">
-                            <th>Role</th>
-                            <th class="text-center">Users</th>
-                            <th class="text-center">Special Permission</th>
-                            <th style="text-align: center !important;">Screen Permissions</th>
-                            <th style="text-align: center !important;">Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngIf="roleDetails == null || roleDetails.length == 0">
-                            <td colspan="12" class="text-center">No records found</td>
-                        </tr>
-                        <tr *ngFor="let item of roleDetails">
-                            <td>{{item.RoleName}}</td>
-                            <td class="text-center"><a style="cursor: pointer; color: cornflowerblue;">4/12</a>
-                            </td>
-                            <td class="text-center"><a style="cursor: pointer; color: cornflowerblue;"
-                                    (click)="openspecialpermissions(null)">10/20
-                                </a></td>
-                            <td class="text-center"><a style="cursor: pointer; color: cornflowerblue;"
-                                    (click)="onpermclick()">20/40
-                                </a></td>
-                            <td style="text-align: center !important;">
-                                <a matTooltip="Edit Role"
-                                    style="margin-right: 10px; cursor: pointer; color: cornflowerblue;"
-                                    (click)="openEditDialog()">
-                                    <i class="fa fa-edit"></i>
-                                </a>
-                                <!-- <a matTooltip="Edit Role"   matTooltip="You do not have permission to perform this action" 
+<!-- Creating Table -->
+<div class="table-responsive col-sm-12 mt-3">
+    <table id="example2" class="table table-bordered table-hover">
+        <thead class="tbl-head">
+            <tr class="tr-grid-header">
+                <th>Role</th>
+                <th class="text-center">Users</th>
+                <th class="text-center">Special Permission</th>
+                <th style="text-align: center !important;">Screen Permissions</th>
+                <th style="text-align: center !important;">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngIf="roleDetails == null || roleDetails.length == 0">
+                <td colspan="12" class="text-center">No records found</td>
+            </tr>
+            <tr *ngFor="let item of roleDetails">
+                <td>{{item.RoleName}}</td>
+                <td class="text-center"><a style="cursor: pointer; color: cornflowerblue;">4/12</a>
+                </td>
+                <td class="text-center"><a style="cursor: pointer; color: cornflowerblue;"
+                        (click)="openspecialpermissions(null)">10/20
+                    </a></td>
+                <td class="text-center"><a style="cursor: pointer; color: cornflowerblue;" (click)="onpermclick()">20/40
+                    </a></td>
+                <td style="text-align: center !important;">
+                    <a matTooltip="Edit Role" style="margin-right: 10px; cursor: pointer; color: cornflowerblue;"
+                        (click)="openEditDialog()">
+                        <i class="fa fa-edit"></i>
+                    </a>
+                    <!-- <a matTooltip="Edit Role"   matTooltip="You do not have permission to perform this action" 
                                     style="margin-right: 10px;cursor: not-allowed; opacity: 0.5 !important; color: rgb(102, 102, 102);">
                                     <i class="fa fa-edit"></i>
                                 </a> -->
 
-                                <a>
-                                    <i style="cursor: pointer;" matTooltip="Delete Role" class="fa fa-trash red"
-                                        (click)="deleteConfirmation()"></i>
-                                </a>
-                                <!-- <i style="cursor:not-allowed; color: rgb(138, 138, 138);"
+                    <a>
+                        <i style="cursor: pointer;" matTooltip="Delete Role" class="fa fa-trash red"
+                            (click)="deleteConfirmation()"></i>
+                    </a>
+                    <!-- <i style="cursor:not-allowed; color: rgb(138, 138, 138);"
                                     matTooltip="You do not have permission to perform this action" class="fa fa-trash">
                                 </i> -->
 
-                            </td>
-                        </tr>
-                    </tbody>
+                </td>
+            </tr>
+        </tbody>
 
-                </table>
-                <mat-paginator [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)"
-                    [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons>
-                </mat-paginator>
-            </div>
-        </div>
-    </div>
+    </table>
+    <mat-paginator [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)"
+        [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons>
+    </mat-paginator>
 </div>
-
-<!-- <div *ngIf="!access.btRead" class="col-sm-12 text-center">
-    <h4 style="margin-top: 10%;">
-        You do not have permission to access this screen, please contact your Admin.
-    </h4>
-</div> -->
