--- a/src/app/pages/super-admin/admin-setup/staff-users/admin-userss/admin-userss.component.html
+++ b/src/app/pages/super-admin/admin-setup/staff-users/admin-userss/admin-userss.component.html
@@ -1,40 +1,37 @@
 <!-- Add Filter Tabs -->
-<div class="container-fluid" style="padding-right: 5px;
-  padding-left: 0px; margin-bottom: 10px;">
-    <div class="w-100">
-        <div class="flex-p">
-            <div class="row wrap">
-                <div class="col-sm-12 no-padding">
-                    <div class="row-wrap">
-                        <div class="w-100">
-                            <div class="row">
-                                <div class="col-xs-6"></div>
-                                <div class="col-xs-6">
-                                    <div class="col-xs-6"></div>
-                                    <div class="col-xs-6" style="margin-left: -23px;">
-                                        <div class="">
-                                            <button mat-raised-button style="background-color: blue; color: white;"
-                                                class="pull-right" (click)="openEditDialog()">
-                                                <mat-icon>person_add</mat-icon> Add User
-                                            </button>
-                                            <button mat-raised-button style="background-color: black; color:white;"
-                                                class="pull-right filter-hover margin-right-10"
-                                                (click)="filterToggle = !filterToggle">
-                                                <mat-icon>filter_list</mat-icon> Filter
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<div class="col-sm-12">
+    <button mat-raised-button style="background-color: blue; color: white;" class="pull-right"
+        (click)="openEditDialog()">
+        <mat-icon>person_add</mat-icon> Add User
+    </button>
+    <button mat-raised-button style="background-color: black; color:white;"
+        class="pull-right filter-hover margin-right-10" (click)="filterToggle = !filterToggle">
+        <mat-icon>filter_list</mat-icon> Filter
+    </button>
+    <!-- Sort Button -->
+    <button mat-raised-button mat-button [matMenuTriggerFor]="sortMenu" style="background-color: #37474f; color: white"
+        class="filters-hover pull-right margin-right-10">
+        <span (click)="toggleSort($event)" class="icon-text">
+            <mat-icon style="margin-top: 0px; margin-bottom: -6px;">
+                {{ isAscending ? 'arrow_drop_up' : 'arrow_drop_down' }}
+            </mat-icon>
+        </span>
+        <span class="icon-text">SORT</span>
+    </button>
+
+    <!-- Dropdown Menu -->
+    <mat-menu #sortMenu="matMenu">
+        <div class="scrollable-menu">
+            <button mat-menu-item (click)="onSortOptionSelected('User Name')">User Name</button>
+            <button mat-menu-item (click)="onSortOptionSelected('Email')">Email</button>
+            <button mat-menu-item (click)="onSortOptionSelected('Phone')">Phone</button>
+            <button mat-menu-item (click)="onSortOptionSelected('Role')">Role</button>
+
         </div>
-    </div>
+    </mat-menu>
 </div>
 <!-- Filter UI -->
-<div fxLayout="row wrap" *ngIf="filterToggle" style=" margin-bottom: 10px;">
+<div fxLayout="row wrap" class="col-sm-12 mt-3" *ngIf="filterToggle">
     <div fxFlex="100" class="flex-p w-100">
         <form [formGroup]="filterForm">
             <mat-card class="filter">
@@ -50,30 +47,39 @@
                                     placeholder="Search by Name, Email, Role...">
                             </div>
                         </div>
-                        <!-- <div class="col-sm-4">
-                            <div class="col-sm-3">
-                                <b>Status:</b>
-                            </div>
-                            <div class="col-sm-9">
-                                <select placeholder="Select Status" class="form-control" formControlName="Status">
-                                    <option *ngFor="let option of Status" [value]="option.value">
-                                        {{option.name}}
-                                    </option>
-                                </select>
-                            </div>
-                        </div> -->
+
+
+
                         <div class="col-sm-8">
-                            <a (click)="filterToggle = !filterToggle" class="pull-right"
-                                style="font-size: 25px; cursor: pointer; margin-left: 5px">
-                                <i class="fa fa-angle-double-up" aria-hidden="true"></i>
-                            </a>
-                            <button mat-raised-button color="primary" class="pull-right" (click)="filter()">
-                                <mat-icon>youtube_searched_for</mat-icon> Search
-                            </button>
-                            <button mat-raised-button class="pull-right btn-default margin-right-10"
-                                (click)="clearFilter()">
-                                <mat-icon>settings_backup_restore</mat-icon> Clear
-                            </button>
+                            <div class="row">
+                                <div class="col-sm-12 offset-sm-3">
+                                    <a (click)="filterToggle = !filterToggle" matTooltip="Close" class="pull-right"
+                                        style="font-size: 20px; cursor: pointer; margin-left: 5px">
+                                        <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+                                    </a>
+
+                                    <i class="material-icons pull-right" matTooltip="Clear"
+                                        style="font-size: 25px; cursor: pointer; margin-left: 5px">
+                                        settings_backup_restore
+                                    </i>
+
+                                    <i class="fa fa-save pull-right" matTooltip="Save" style="
+                                                  font-size: 20px;
+                                                  cursor: pointer;
+                                                  margin-left: 5px;
+                                                  color: green;
+                                                " aria-hidden="true">
+                                    </i>
+
+                                    <i class="fa fa-search pull-right" matTooltip="Search" style="
+                                                  font-size: 20px;
+                                                  cursor: pointer;
+                                                  margin-left: 5px;
+                                                  color: blue;
+                                                " aria-hidden="true">
+                                    </i>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
@@ -83,12 +89,13 @@
     </div>
 </div>
 <!-- Table -->
-<div class="col-sm-12">
+<div class="col-sm-12 mt-3">
     <div id="grid-table-container" class="table-responsive">
         <table matSort class="table table-bordered table-hover">
             <thead class="tbl-head1" style="background-color: rgb(58, 53, 53); color: white;">
                 <tr>
                     <th class="text-center">Actions</th>
+                    <th class="text-center">Status</th>
                     <th style="white-space: nowrap;">User Name</th>
                     <th>Email</th>
                     <th>Phone</th>
@@ -96,9 +103,7 @@
                     <th class="text-center">Liaison</th>
                     <th class="text-center">Core</th>
                     <th class="text-center">2F</th>
-
-                    <th class="text-center">Status</th>
-
+                    <th class="text-center">Change Password</th>
                 </tr>
             </thead>
             <tbody>
@@ -106,7 +111,7 @@
                     <td colspan="10" class="text-center">No records found</td>
                 </tr>
                 <tr *ngFor="let applicant of users">
-                    <td style="white-space: nowrap; padding-top: 20px !important;" class=" text-center">
+                    <td class="text-center">
                         <a matTooltip="Edit Record" style="margin-right: 10px; cursor: pointer; color: cornflowerblue;"
                             (click)="openEditDialog()">
                             <i class="fa fa-edit"></i>
@@ -116,27 +121,29 @@
                                 (click)="deleteConfirmation()"></i>
                         </a>
                     </td>
-                    <td style="padding-top: 20px !important;">{{applicant.UserName}}</td>
-                    <td style="padding-top: 20px !important;">{{applicant.UserEmail}}</td>
-                    <td style="padding-top: 20px !important;">{{applicant.UserPhone}}</td>
-                    <td style="padding-top: 20px !important;">{{applicant.RoleName}}</td>
-
-                    <td class="style text-center">
-                        <mat-checkbox></mat-checkbox>
-                    </td>
-                    <td class="style text-center">
-                        <mat-checkbox [checked]="applicant.vedor13"></mat-checkbox>
-                    </td>
-                    <td class="style text-center">
-                        <mat-checkbox></mat-checkbox>
-                    </td>
-                    <td class="text-center" style="text-align: center !important; padding-top: 20px !important;">
+                    <td class="text-center">
                         <a [ngStyle]="{'color':  applicant.IsActive? 'blue' : 'red','cursor':'pointer'}">
                             <span *ngIf="!applicant.IsActive" style="color:red">Inactive</span>
                             <span *ngIf=" applicant.IsActive">Active</span>
                         </a>
                     </td>
+                    <td>{{applicant.UserName}}</td>
+                    <td>{{applicant.UserEmail}}</td>
+                    <td>{{applicant.UserPhone}}</td>
+                    <td>{{applicant.RoleName}}</td>
 
+                    <td class="text-center">
+                        <mat-checkbox></mat-checkbox>
+                    </td>
+                    <td class="text-center">
+                        <mat-checkbox [checked]="applicant.vedor13"></mat-checkbox>
+                    </td>
+                    <td class="text-center">
+                        <mat-checkbox></mat-checkbox>
+                    </td>
+                    <td class="text-center" style="color: blue; cursor: pointer;">
+                        <mat-icon>settings_backup_restore</mat-icon>
+                    </td>
                 </tr>
             </tbody>
         </table>
